[gd_scene load_steps=13 format=3 uid="uid://dgdys3ik2womk"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_uctic"]
[ext_resource type="Texture2D" uid="uid://d33ldkylp5thw" path="res://enemy/asset/tank.png" id="2_0psp7"]
[ext_resource type="Texture2D" uid="uid://dbur07fvjbtc" path="res://enemy/asset/tank_canon.png" id="3_cb7eq"]
[ext_resource type="Texture2D" uid="uid://boq4yxw2yop37" path="res://enemy/asset/vortex.png" id="4_vdtxd"]

[sub_resource type="Gradient" id="Gradient_16nrq"]
offsets = PackedFloat32Array(0, 0.997006)
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ujedw"]
gradient = SubResource("Gradient_16nrq")

[sub_resource type="Animation" id="Animation_rpwx8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death_sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("death_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5k4qk"]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death_sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("death_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1xgdx"]
_data = {
"RESET": SubResource("Animation_rpwx8"),
"death": SubResource("Animation_5k4qk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbv3s"]
size = Vector2(64, 159)

[sub_resource type="Gradient" id="Gradient_f1p8i"]
offsets = PackedFloat32Array(0.162577, 0.831288, 0.990798)
colors = PackedColorArray(1, 0.607843, 0, 1, 0.526793, 5.72633e-07, 1.06417e-07, 0.560784, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_imtru"]
offsets = PackedFloat32Array(0, 0.705521, 1)
colors = PackedColorArray(0.219501, 0.219501, 0.219501, 1, 0.490196, 0.490196, 0.490196, 1, 1, 1, 1, 0)

[node name="VirtualEnemy" type="CharacterBody2D"]
script = ExtResource("1_uctic")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.696379, 0.398425, 3.85046e-07, 1)
scale = Vector2(0.194791, 0.309801)
texture = ExtResource("2_0psp7")
flip_v = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.696379, 0.398425, 3.85046e-07, 1)
position = Vector2(-0.0433825, 1.71127e-07)
rotation = -3.14159
scale = Vector2(0.194791, 0.309801)
texture = ExtResource("3_cb7eq")

[node name="death_sprite" type="Sprite2D" parent="."]
scale = Vector2(1e-05, 1e-05)
texture = SubResource("GradientTexture2D_ujedw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1xgdx")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gbv3s")

[node name="target" type="Marker2D" parent="."]
position = Vector2(0, 72)

[node name="left_wall" type="RayCast2D" parent="."]
target_position = Vector2(-100, 0)
collision_mask = 20

[node name="right_wall" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)
collision_mask = 20

[node name="right_shoot" type="RayCast2D" parent="."]
position = Vector2(-16, 64)
target_position = Vector2(0, 400)

[node name="left_shoot" type="RayCast2D" parent="."]
position = Vector2(16, 64)
target_position = Vector2(0, 400)

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
lifetime = 1.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_vdtxd")
emission_shape = 1
emission_sphere_radius = 14.47
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 18.96
initial_velocity_max = 142.18
angular_velocity_max = 354.88
color_ramp = SubResource("Gradient_f1p8i")

[node name="Smokes" type="Node2D" parent="."]

[node name="Smoke20" type="CPUParticles2D" parent="Smokes"]
position = Vector2(0, -56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_vdtxd")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_imtru")

[node name="Smoke40" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-16, -16)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_vdtxd")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_imtru")

[node name="Smoke60" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 0)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_vdtxd")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_imtru")

[node name="Smoke80" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-16, 40)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_vdtxd")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_imtru")

[node name="Death_Smoke" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_vdtxd")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_imtru")
